# Real-Time-Edge-Detection-Viewer

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/alone/edgeview/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/alone/edgeview/: MainActivity.kt
app/src/main/java/com/alone/edgeview/gl/: GLESRenderer.kt
app/src/main/java/com/alone/edgeview/net/: WebSocketServer.kt
app/src/main/java/com/alone/edgeview/utils/: ImageUtils.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/alone/edgeview/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
web application/: index.html  viewer.ts
